Removed Contact Page

--- a/about.html
+++ b/about.html
@@ -1,30 +1,89 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>ABOUT</title>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="assets/css/main.css" type="text/css">
- 		<script src="assets/js/main.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title>FLIPPERSMACK</title>
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="assets/css/main.css" type="text/css">
+
+  <script src="assets/js/main.js"></script>
 
   <style type="text/css">
-   :root {
+    :root {
       cursor: url(assets/images/cursor.png), auto;
-  }
+    }
   </style>
-
+	
 </head>
 <body>
 
 <div class="topnav" id="myTopnav">
-  <a href="index.html" >Flippersmack</a>
+  <a href="index.html">Flippersmack</a>
   <a href="shop.html">Shop</a>
-  <a href="contact.html">Contact</a>
-  <a href="about.html" class="active">About</a>
+  <a href="about.html">About</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
 </div>
 
+
+<div class=popupfour>
+      <div class=tab> &nbsp;O O O 
+      </div>
+
+		<u>About the Book</u>
+		<br>
+		Articles and reviews from your favorite writers. The low-down on what’s fresh in tech, comics, movies, and music. Wrapped in a style all its own. Named after the word ‘flippersmack’ which is what a penguin does when it slaps another object. The penguin usually jumps one to two feet off the ground when it does this.
+
+		<br>
+
+		Your very own taste of insanity to inspire, inform, and entertain. From the creators of System Failure and Avalanche, we present to you - FLIPPERSMACK!
+
+		<br>
+		<br>
+
+		<u>Features & Details</u>
+		<br>Primary Category: Humor
+		<br>Size: 5×8 in, 13×20 cm
+		<br>58 Pages
+		<br>ISBNvSoftcover: 9780368783920
+		<br>Publish Date: May 13, 2019
+		<br>Language: English
+
+</div>
+
+
+<div class=popuptwo>
+   <div class=tab> &nbsp;O O O  
+   </div>
+
+  <a href="shop.html" class=buy>
+  BUY NOW!!!<br>BUY NOW!!!<br>BUY NOW!!!<br>BUY NOW!!!<br>BUY NOW!!!<br>BUY NOW!!!
+  </a>
+
+</div>
+
+ <img scr="assets/images/icons.png" width="100%" >
+
+<div class=popupthree>
+   <div class=tab> &nbsp;O O O  
+   </div>
+
+  <div class=preview>
+        <iframe src="http://www.sophieday.nyc/" 
+        allowfullscreen=''
+        scrolling='yes'>
+        </iframe>
+      </div>
+
+</div>
+
+<div class=icons><img src="assets/images/icons.png"></div>
+
+    
+  
 
 </body>
 </html>
