--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
 <body>
 
 <div class="topnav" id="myTopnav">
-  <a href="index.html" class="active">Flippersmack</a>
+  <a href="index.html">Flippersmack</a>
   <a href="shop.html">Shop</a>
-  <a href="contact.html">Contact</a>
   <a href="about.html">About</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
