--- a/shop.html
+++ b/shop.html
@@ -17,8 +17,7 @@
 
 <div class="topnav" id="myTopnav">
   <a href="index.html" >Flippersmack</a>
-  <a href="shop.html" class="active">Shop</a>
-  <a href="contact.html">Contact</a>
+  <a href="shop.html">Shop</a>
   <a href="about.html">About</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
