--- a/about.html
+++ b/about.html
@@ -55,29 +55,28 @@
 </div>
 
 
-<div class=popuptwo>
+<div class=popupfive>
    <div class=tab> &nbsp;O O O  
    </div>
 
-  <a href="shop.html" class=buy>
-  BUY NOW!!!<br>BUY NOW!!!<br>BUY NOW!!!<br>BUY NOW!!!<br>BUY NOW!!!<br>BUY NOW!!!
-  </a>
+  <a href="shop.html" class=price>
+	ONLY $19.99!!!  </a>
 
 </div>
 
- <img scr="assets/images/icons.png" width="100%" >
 
-<div class=popupthree>
+<div class=popupsix>
    <div class=tab> &nbsp;O O O  
    </div>
 
-  <div class=preview>
-        <iframe src="http://www.sophieday.nyc/" 
-        allowfullscreen=''
-        scrolling='yes'>
-        </iframe>
-      </div>
+  <div class=container>
+	<img src="assets/images/sophie.png" class=image>
+        <div class="overlay">
+			<a href="http://www.sophieday.nyc/" class="text">Featuring images by Sophie Day!</a>
 
+        </div>
+
+	</div>
 </div>
 
 <div class=icons><img src="assets/images/icons.png"></div>
